--- a/apps/oasis-app/package.json
+++ b/apps/oasis-app/package.json
@@ -37,6 +37,7 @@
     "ai": "^3.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^6.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.560.0",
